# CMakeStarterProjectWithTests

./: .gitignore  CMakeLists.txt  README.md
CMakeUtils/FindOrFetch/: FindOrFetchGTestGMock.cmake
Code/: CMakeLists.txt
Code/StarterProject/hdr/: StarterProject.hpp
Code/StarterProject/src/: MainStarterProject.cpp  StarterProject.cpp
Mock/hdr/: IRealEntity.hpp  MockEntity.hpp
Mock/src/: TestMockEntity.cpp
Tests/: CMakeLists.txt
Tests/UnitTestStarterProject/hdr/: StarterProject_FixtureTests.hpp  StarterProject_ParametrisedFixtureTests.hpp  StarterProject_ParametrisedTests.hpp
Tests/UnitTestStarterProject/src/: StarterProject_FixtureTests.cpp  StarterProject_ParametrisedFixtureTests.cpp  StarterProject_ParametrisedTests.cpp  StarterProject_StandAloneTests.cpp
